--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 {post_hooks, []}.
 
-{deps, []}.
+{deps, [{prometheus, "3.2.2"}]}.
 {shell, [{apps, [prometheus_push]}]}.
 {cover_enabled, true}.
 {cover_export_enabled, true}.
@@ -19,7 +19,11 @@
 {xref_checks,[undefined_function_calls,undefined_functions,locals_not_used,
               deprecated_function_calls,deprecated_functions]}.
 
-{profiles, [{docs, [{deps, [{edown, "0.8.1"}]},
+{profiles, [{test, [{deps,
+                     [{meck, {git, "https://github.com/eproxus/meck",
+                              {branch, "master"}}}]}
+                   ]},
+            {docs, [{deps, [{edown, "0.8.1"}]},
                     {edoc_opts,
                      [{doclet, edown_doclet},
                       {dir, "doc"},
