--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ sudo: false
 language: erlang
 install: 'true'
 before_script:
-- wget https://s3.amazonaws.com/rebar3/rebar3
-- chmod +x rebar3
+  - wget https://s3.amazonaws.com/rebar3/rebar3
+  - chmod +x rebar3
+  - mix deps.get --only test
 env: PATH=$PATH:.
 cache:
   directories:
-  - $HOME/.cache/rebar3/
+    - $HOME/.cache/rebar3/
 otp_release:
-- 19.0
-- 18.0
+  - 19.0
+  - 18.0
 script: "./bin/checks.sh && ./rebar3 coveralls send"
