--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 sudo: false
-language: erlang
+language: elixir
 install: 'true'
+matrix:
+  include:
+    - otp_release: 18.3
+      elixir: 1.3.2
+    - otp_release: 19.0
+      elixir: 1.3.2
 before_script:
   - wget https://s3.amazonaws.com/rebar3/rebar3
   - chmod +x rebar3
@@ -9,7 +15,4 @@ env: PATH=$PATH:.
 cache:
   directories:
     - $HOME/.cache/rebar3/
-otp_release:
-  - 19.0
-  - 18.0
 script: "./bin/checks.sh && ./rebar3 coveralls send"
