--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 sudo: false
 language: elixir
-install: 'true'
-matrix:
-  include:
-    - otp_release: 18.3
-      elixir: 1.3.2
-    - otp_release: 19.0
-      elixir: 1.3.2
+elixir:
+  - 1.3.2
+  - 1.4.0
+otp_release:
+  - 19.1
 before_script:
   - wget https://s3.amazonaws.com/rebar3/rebar3
   - chmod +x rebar3
+  - mix local.hex --force
+  - mix local.rebar --force
   - mix deps.get --only test
 env: PATH=$PATH:.
 cache:
