feat(*): Add ssl support

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 %% -*- mode: erlang -*-
 {erl_opts, [debug_info]}.
 {plugins, [{coveralls, "2.0.1"},
-           {rebar3_lint, "0.1.10"}]}.
+           {rebar3_lint, "0.1.10"}, 
+           rebar3_fmt]}.
 
 {post_hooks, []}.
 
